--- a/4_july_25/index.html
+++ b/4_july_25/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number of People Counting app</title>
-    <style>
-        body {background-color: powderblue;}
-        h1   {color: blue;}
-        p    {color: red;}
-        </style>
+    <link rel="stylesheet" href="index.css">
     
 </head>
 <body>
